@@ -1,3 +1,7 @@
+2002-09-12  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
+
+	* tmda-inject (message_format): Utilize email.Utils.formataddr().
+
 2002-09-11  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
 
 	* tmda-*: Prepend prefix/site-packages/TMDA/pythonlib if the
