@@ -1,3 +1,9 @@
+2002-09-12  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
+
+	* Util.py (formataddr): Remove function.
+
+	(make_date): Utilize email.Utils.formatdate().
+
 2002-09-11  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
 
 	* pythonlib: New directory to house any overrides of standard
